<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <SearchView
        android:id="@+id/coinSearch"
        android:layout_width="409dp"
        android:layout_height="60dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:queryHint="한글명 입력">


    </SearchView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coinSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="25dp">

        <TableLayout
            android:id="@+id/cointableLayout"
            android:layout_width="413dp"
            android:layout_height="549dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_View">

            <TableRow
                android:id="@+id/tabledevision"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="★"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/coin_symbol"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="한글명"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/coin_now"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="현재가"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/coin_percent"
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:text="전일대비"
                    android:textSize="20sp" />

            </TableRow>


            <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp">

               <TextView
                   android:layout_width="40dp"
                   android:layout_height="45dp"
                   android:layout_gravity="center"
                   android:text="@string/favorite"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/coin_nm"
                   android:layout_width="133dp"
                   android:layout_height="45dp"
                   android:layout_gravity="center"
                   android:text="@string/coinname"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/opening_price"
                   android:layout_width="150dp"
                   android:layout_height="45dp"
                   android:layout_gravity="center"
                   android:text="@string/string_string_price"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/fluctate_rate_24H"
                   android:layout_width="91dp"
                   android:layout_height="45dp"
                   android:layout_gravity="center"
                   android:text="@string/percent"
                   android:textSize="18sp" />

           </TableRow>


        </TableLayout>

    </ScrollView>





        </androidx.constraintlayout.widget.ConstraintLayout>